<resources>
    <string name="app_name">Nota de Recordatorio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_slideshow">Categorías</string>
    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_listado">U.Listado</string>
    <string name="menu_detalle">Detalle</string>
    <string name="login_titulo">LOGIN /</string>
    <string name="login_correo">Correo</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="txt_registrar">Regístrate</string>
    <string name="txt_login">Login</string>
    <string name="txt_texto">------ Inicia sesión con: -----</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_crear_usuario">Crear Usuario</string>
    <string name="registarte_nombre">Nombre</string>
    <string name="registarte_email">Correo</string>
    <string name="registrate_contrasenia">Contraseña</string>
    <string name="registrate_btn_registrar">Registrar</string>

    <!-- spinner para los estados de las notas -->
    <string-array name="estados_nota">
        <item>Pendiente</item>
        <item>En progreso</item>
        <item>Completada</item>
    </string-array>

    <!-- spinner para los categorias de las notas -->
    <string-array name="categorias_nota">
        <item>Trabajo</item>
        <item>Personal</item>
        <item>Compras</item>
    </string-array>
    <string-array name="categorias_nota_ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>