<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.notasrecordatorio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notas"
        android:name="com.example.notasrecordatorio.ui.notas.NotasFragment"
        android:label="@string/menu_notas"
        tools:layout="@layout/fragment_notas" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.notasrecordatorio.ui.categoria.CategoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_categoria" />

    <fragment
        android:id="@+id/nav_usuarios"
        android:name="com.example.notasrecordatorio.ui.registro.RegistroFragment"
        android:label="@string/menu_crear_usuario"
        tools:layout="@layout/fragment_registro" />

    <fragment
        android:id="@+id/nav_listado"
        android:name="com.example.notasrecordatorio.ui.registro.ListadoFragment"
        android:label="@string/menu_listado"
        tools:layout="@layout/fragment_listado" />
</navigation>